<resources>
    <string name="app_name">Movie Application</string>
    <string name="search_hint">enter a movie name to search</string>
    <string name="title">Movie Title: </string>
    <string name="year">YEAR: </string>
    <string name="rating">Rating: </string>
    <string name="released">Released: </string>
    <string name="runTime">RunTime: </string>
    <string name="genre">Genre: </string>
    <string name="plot">Plot: </string>
    <string name="language">Language: </string>
    <string name="director">Director: </string>
    <string name="writer">Writer: </string>
    <string name="actors">Actors: </string>
    <string name="country">Country: </string>
    <string name="awards">Awards: </string>
    <string name="imdbRating">IMDB Rating: </string>
    <string name="imdbVotes">IMDB Votes: </string>
    <string name="type">Type: </string>
    <string name="poster">Movie Poster</string>

</resources>
