<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="10dp"
    android:layout_margin="5dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/poster"
        android:id="@+id/summaryPoster"
        android:layout_gravity="top|start"
        android:layout_margin="5dp" />

    <TextView
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/summaryTitle"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_toEndOf="@id/summaryPoster"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="5dp"
        android:layout_toRightOf="@id/summaryPoster" />
    <TextView
        android:text="@string/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/summaryYear"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_below="@id/summaryTitle"
        android:layout_toEndOf="@id/summaryPoster"
        android:layout_marginBottom="5dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@id/summaryPoster"/>
    <TextView
        android:text="@string/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/summaryRating"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_below="@id/summaryYear"
        android:layout_toEndOf="@id/summaryPoster"
        android:layout_marginBottom="5dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@id/summaryPoster"/>
    <TextView
        android:text="@string/released"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/summaryReleased"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_below="@id/summaryRating"
        android:layout_toEndOf="@id/summaryPoster"
        android:layout_marginBottom="5dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@id/summaryPoster"/>
    <TextView
        android:text="@string/runTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/summaryRunTime"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_below="@id/summaryReleased"
        android:layout_toEndOf="@id/summaryPoster"
        android:layout_marginBottom="5dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@id/summaryPoster"/>
    <TextView
        android:text="@string/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/summaryGenre"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_below="@id/summaryRunTime"
        android:layout_toEndOf="@id/summaryPoster"
        android:layout_marginBottom="5dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@id/summaryPoster"/>
    <TextView
        android:text="@string/plot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/summaryPlot"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_below="@id/summaryPoster"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:text="@string/language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/summaryLanguage"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_below="@id/summaryPlot"
        android:layout_marginBottom="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:text="@string/director"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/summaryDirector"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_below="@id/summaryLanguage"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <TextView
        android:text="@string/writer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/summaryWriter"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_below="@id/summaryDirector"
        android:layout_marginBottom="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:text="@string/actors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/summaryActors"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_below="@id/summaryWriter"
        android:layout_marginBottom="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <TextView
        android:text="@string/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/summaryCountry"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_below="@id/summaryActors"
        android:layout_marginBottom="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <TextView
        android:text="@string/awards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/summaryAwards"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_below="@id/summaryCountry"
        android:layout_marginBottom="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <TextView
        android:text="@string/imdbRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/summaryIMDBRating"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_below="@id/summaryAwards"
        android:layout_marginBottom="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <TextView
        android:text="@string/imdbVotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/summaryIMDBVotes"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_below="@id/summaryIMDBRating"
        android:layout_marginBottom="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <TextView
        android:text="@string/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/summaryType"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_below="@id/summaryIMDBVotes"
        android:layout_marginBottom="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
</RelativeLayout>

</ScrollView>
</android.support.v7.widget.CardView>


</RelativeLayout>

