<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        android:layout_gravity="center"
        android:padding="5dp"
        android:layout_margin="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lessDetail">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/poster"
                android:id="@+id/poster"/>

            <TextView
                android:text="@string/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/year"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_below="@id/poster"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:text="@string/title"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/movieName"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/poster" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>